--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = autotype delegating_constructors delete_default_func \
-	  lambda nullptr rvalue_reference uniform_initialize
+	  lambda nullptr rvalue_reference uniform_initialize \
+	  chrono
